<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp"
	tools:context=".fundamentals.Fundamentals023A">

	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/website_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edittext_uri" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/open_website_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:onClick="openWebsite"
		android:text="@string/button_uri" />

	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/location_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edittext_loc" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/open_location_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:onClick="openLocation"
		android:text="@string/button_loc" />

	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/share_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edittext_share" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/share_text_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:onClick="shareText"
		android:text="@string/button_share" />

</androidx.appcompat.widget.LinearLayoutCompat>