<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".fundamentals.Fundamentals031">

	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/operand_one_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/type_operand_one_hint"
		android:inputType="numberDecimal" />

	<androidx.appcompat.widget.AppCompatEditText
		android:id="@+id/operand_two_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/type_operand_two_hint"
		android:inputType="numberDecimal" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/operation_add_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onAdd"
			android:text="@string/add_operation_text"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/operation_sub_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onSub"
			android:text="@string/sub_operation_text"
			app:layout_constraintStart_toEndOf="@id/operation_add_btn"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/operation_div_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onDiv"
			android:text="@string/div_operation_text"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/operation_add_btn" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/operation_mul_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onMul"
			android:text="@string/mul_operation_text"
			app:layout_constraintStart_toEndOf="@id/operation_div_btn"
			app:layout_constraintTop_toBottomOf="@id/operation_sub_btn" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/operation_result_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin" />

</androidx.appcompat.widget.LinearLayoutCompat>