<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fundamentals.Fundamentals013">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/article_heading"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:padding="@dimen/padding_regular"
		android:text="@string/article_title"
		android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
		android:textColor="@color/white"
		android:textStyle="bold" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/article_heading">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/article_subheading"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/padding_regular"
				android:text="@string/article_subtitle"
				android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/article"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:lineSpacingExtra="@dimen/line_spacing"
				android:padding="@dimen/padding_regular"
				android:text="@string/article_text" />

		</androidx.appcompat.widget.LinearLayoutCompat>

	</androidx.core.widget.NestedScrollView>

</RelativeLayout>